--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,3 +6,32 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
+
+
+/* Global custom scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: bla;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #3b3f45;
+    border-radius: 9999px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #4e545c;
+  }
+  
+  /* Firefox scrollbar */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #3b3f45 transparent;
+  }
+  
